Backface visibility fix for safari

--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,7 @@
   width: 100%;
   height: 100%;
   backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
 }
 
 .flip-card-back {
